--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.1",
 		"vite": "^7.1.7"
+	},
+	"dependencies": {
+		"openai": "^6.3.0"
 	}
 }
